fix filter block display issue when keyword too long

--- a/client-app/filter-block/filter-block.less
+++ b/client-app/filter-block/filter-block.less
@@ -7,6 +7,7 @@
 	height: 40px;
 	justify-content: space-between;
 	margin-left: 6px;
+	overflow-y: hidden;
 
 	&.loading {
 		opacity: 0;
@@ -35,8 +36,12 @@
 	font-size: 14px;
 	height: 30px;
 	margin: 5px 10px;
+	max-width: 480px;
+	overflow: hidden;
 	padding: 6px 25px 6px 10px;
 	position: relative;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 
 	&::after {
 		background-image: url(common/cross.svg);
